# traycortex

./: .gitignore  Makefile  README.md  TODO.md  bmsystray.py  borgmatic.kra  mypy.ini  pyproject.toml  traycortex.py
tests/traycortex/: conftest.py  test_borgmatic.py  test_config.py  test_tray.py
traycortex/: borgmatic.py  client.py  config.py  defaults.py  log.py  tray.py
