[tool.poetry]
name = "traycortex"
version = "0.5.1"
description = "borgmatic systray icon"
authors = ["Sebastian Stark <sstark@mailbox.org>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pystray = "^0.19.5"
pillow = "^10.3.0"
pygobject = "^3.48.2"
platformdirs = "^4.2.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.2"
coverage = "^7.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
traycortex = "traycortex.tray:app"
traycortex-cli = "traycortex.client:cli"
